# DeepSearch

./: .gitignore  .project  CHANGELOG.md  Cargo.toml  README.md  beta.md  build.rs  egui_spec.md  pop.py  refactor.md  spec.md  workflow.md
.github/workflows/: release.yml
docs/: index.html  index.xml  old_utils.rs  sitemap.xml  style.css
docs/categories/: index.xml
docs/posts/: index.xml
docs/posts/hello/: index.html
docs/posts/intro/: index.html
docs/tags/: index.xml
packaging/linux/: deepsearch.desktop  install.sh
packaging/macos/: Info.plist  package_macos.sh
src/: db.rs  display.rs  main.rs  utils.rs
src/gui/: app.rs  events.rs  mod.rs
src/gui/components/: indexing_tab.rs  menu_bar.rs  mod.rs  search_tab.rs  status_bar.rs
src/pop/: context.rs  control.rs  engine.rs  mod.rs  registry.rs
src/processes/: file_content_search.rs  index.rs  input.rs  live_search.rs  mod.rs  output.rs  scan.rs  scope.rs  search.rs
